# rag-features

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY_RAILWAY.md  Dockerfile  Makefile  README.md  dev_server.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.devcontainer/: devcontainer.json
app/: container.py  deps.py  logging.py  main.py
app/api/: routes_assistants.py  routes_chat.py  routes_documents.py  routes_ingestions.py  schemas.py
app/domain/models/: assistant.py  chat.py  chunk.py  errors.py  ingestion.py
app/domain/pipelines/: retrieval_pipeline.py
app/domain/services/: assistants_service.py  chat_service.py  ingestion_service.py
app/rag/chunking/: adaptive.py  base.py  contextual_docintel.py  (+3 more)
app/storage/: assistants_repo.py  db.py  models.py
app/ui/: components.py  streamlit_app.py  ui_state.py
app/workflows/: ingestion_workflow.py  temporal_client.py  worker.py
config/dynamicconfig/: development-sql.yaml
deploy/: Dockerfile.streamlit  Dockerfile.worker  start-api.sh  start-streamlit.sh  start.sh
docs/: engineering_notes.md
src/app/: container.py  deps.py  logging.py  main.py  settings.py
src/rag/: logging_helper.py
src/ui/: api_client.py  components.py  streamlit_app.py
src/workflows/: ingestion_workflow.py  temporal_client.py  worker.py
tests/: conftest.py  test_api_smoke.py  test_assistants_api.py  test_chunkers.py  test_error_handlers.py  test_flow_and_validation.py  test_llm_factory.py  test_metadata.py  test_reranker.py  test_retrieval_pipeline.py  test_services.py  test_workflow_unit.py
(+110 files in other folders)
